change order column month and add last date append to file